--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "Node-Hapi",
+  "name": "node-hapi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon --ext js.hbs",
     "lint": "standard",
     "lint-fix": "standard --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hapi": "^17.8.1"
+    "handlebars": "^4.0.12",
+    "hapi": "^17.8.1",
+    "inert": "^5.1.2",
+    "vision": "^5.4.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
