--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "firebase-admin": "^6.4.0",
     "handlebars": "^4.0.12",
     "hapi": "^17.8.1",
     "inert": "^5.1.2",
+    "joi": "^14.3.1",
     "vision": "^5.4.4"
   },
   "devDependencies": {
